[package]
name = "safe-remove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.7", features = ["std"] }
clap = { version = "4.5.1", features = ["std"] }
glob = "0.3.1"
globset = "0.4.14"
uuid = { version = "1.7.0", features = ["v4"] }
